2007-02-13  Nicola Pero  <nicola.pero@meta-innovation.com>

	* filesystem.make: Fixed standard subdirectories of Library to
	reduce the amount of config options to only the ones that will
	actually be used.

2007-02-13  Nicola Pero  <nicola.pero@meta-innovation.com>

	* common.make: Rewritten code that builds the -I, -L and -F flags
	to use the new filesystem variables.

2007-02-13  Nicola Pero  <nicola.pero@meta-innovation.com>,
            Matt Rice  <ratmice@gmail.com>,

	* GNUmakefile.in (MAKE_FILES): Added filesystem.make.
	* filesystem.make: New file.
	* common.make: Include the new file.  Rewritten code that
	determines the installation directories.  Use the information from
	filesystem.make when required.

2007-02-13  Nicola Pero  <nicola.pero@meta-innovation.com>
	
	* Master/rules.make (internal-check-install-permissions): Only use
	this rule if GNUSTEP_INSTALLATION_DIR is set.
	* Instance/gswbundle.make (GSWBUNDLE_INSTALL_DIR): Set it by
	default to GNUSTEP_LIBRARIES, which is the same as
	GNUSTEP_INSTALLATION_DIR/Library/Libraries in the traditional
	filesystem but will work with the new filesystem too.
	
2007-02-12  Nicola Pero  <nicola.pero@meta-innovation.com>

	* GNUmakefile.in (GNUSTEP_FLATTENED): Obsolete variable
	removed.

2007-02-12  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Version: Set to 1.14.0 which really means 'unstable version
	after 1.13.0 but before the next stable version'.

2007-02-12  Nicola Pero  <nicola.pero@meta-innovation.com>

	* gnustep-make-help: New file.
	* GNUmakefile.in (MAKE_FILES): Added gnustep-make-help.
	* rules.make (print-gnustep-make-help): New target
	that prints gnustep-make-help.
	* common.make: Mention the new target in the version message.
	
2007-02-12  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac: Added check for $(info ...) function in GNU make.
	* configure: Regenerated.
	* config.make.in: Added MAKE_WITH_INFO_FUNCTION variable.