@@ -93,6 +93,50 @@ reset_path PATH /Tools
 # want to pollute the environment with it.
 unset -f reset_path
 
+unset GNUSTEP_SYSTEM_APPS 
+unset GNUSTEP_SYSTEM_TOOLS 
+unset GNUSTEP_SYSTEM_LIBRARY
+unset GNUSTEP_SYSTEM_HEADERS 
+unset GNUSTEP_SYSTEM_LIBRARIES 
+unset GNUSTEP_SYSTEM_RESOURCES 
+unset GNUSTEP_SYSTEM_JAVA 
+unset GNUSTEP_SYSTEM_DOCUMENTATION 
+unset GNUSTEP_SYSTEM_DOCUMENTATION_MAN
+unset GNUSTEP_SYSTEM_DOCUMENTATION_INFO
+
+unset GNUSTEP_LOCAL_APPS 
+unset GNUSTEP_LOCAL_TOOLS 
+unset GNUSTEP_LOCAL_LIBRARY
+unset GNUSTEP_LOCAL_HEADERS 
+unset GNUSTEP_LOCAL_LIBRARIES 
+unset GNUSTEP_LOCAL_RESOURCES 
+unset GNUSTEP_LOCAL_JAVA 
+unset GNUSTEP_LOCAL_DOCUMENTATION 
+unset GNUSTEP_LOCAL_DOCUMENTATION_MAN
+unset GNUSTEP_LOCAL_DOCUMENTATION_INFO
+
+unset GNUSTEP_NETWORK_APPS 
+unset GNUSTEP_NETWORK_TOOLS 
+unset GNUSTEP_NETWORK_LIBRARY
+unset GNUSTEP_NETWORK_HEADERS 
+unset GNUSTEP_NETWORK_LIBRARIES 
+unset GNUSTEP_NETWORK_RESOURCES 
+unset GNUSTEP_NETWORK_JAVA 
+unset GNUSTEP_NETWORK_DOCUMENTATION 
+unset GNUSTEP_NETWORK_DOCUMENTATION_MAN
+unset GNUSTEP_NETWORK_DOCUMENTATION_INFO
+
+unset GNUSTEP_USER_APPS 
+unset GNUSTEP_USER_TOOLS 
+unset GNUSTEP_USER_LIBRARY
+unset GNUSTEP_USER_HEADERS 
+unset GNUSTEP_USER_LIBRARIES 
+unset GNUSTEP_USER_RESOURCES 
+unset GNUSTEP_USER_JAVA 
+unset GNUSTEP_USER_DOCUMENTATION 
+unset GNUSTEP_USER_DOCUMENTATION_MAN
+unset GNUSTEP_USER_DOCUMENTATION_INFO
+
 unset GNUSTEP_PATHLIST
 unset GNUSTEP_USER_ROOT
 unset GNUSTEP_HOST_OS
@@ -112,3 +156,4 @@ unset GNUSTEP_CONFIG_FILE
 unset GNUSTEP_USER_CONFIG_FILE
 unset GNUSTEP_USER_DIR
 unset GNUSTEP_USER_DEFAULTS_DIR
+
