@@ -204,11 +204,22 @@ fi
 
 export GNUSTEP_HOST GNUSTEP_HOST_CPU GNUSTEP_HOST_VENDOR GNUSTEP_HOST_OS
 
+# Now load in all the remaining paths
+. $GNUSTEP_MAKEFILES/filesystem.sh
+
+#
+# TODO: From here on, we need to update all code to use the new filesystem
+# variables rather than using hardcoded library/java/info/etc locations
+#
+
 #
 # GNUSTEP_PATHLIST is like an abstract path-like shell
 # variable, which can be used to search the gnustep directories - and
 # in these scripts, it is also used to set up other shell variables
 #
+# TODO: GNUSTEP_PATHLIST will be deprecated - maybe we ought have
+# separate pathlists for Library/Headers/Tools/Libraries/xxx directories
+# though so that people can use them.
 if [ -z "$GNUSTEP_PATHLIST" ]; then
 
   # If we need to convert win32 paths, this is the time!
@@ -395,6 +406,74 @@ export INFOPATH
 #
 if [ -f "$GNUSTEP_USER_ROOT/GNUstep.sh" ]; then
   . "$GNUSTEP_USER_ROOT/GNUstep.sh"
+fi
+
+#
+# Clean up the environment by removing the filesystem variables.  Do
+# it unless we were explicitly requirested not to clean it up!  Mostly
+# gnustep-config will request that the environment is not cleaned up,
+# so it can print out all of the GNUstep variables.
+#
+if [ -n "$GNUSTEP_SH_EXPORT_ALL_VARIABLES" ]; then
+  export GNUSTEP_SYSTEM_APPS GNUSTEP_SYSTEM_TOOLS GNUSTEP_SYSTEM_LIBRARY
+  export GNUSTEP_SYSTEM_HEADERS GNUSTEP_SYSTEM_LIBRARIES GNUSTEP_SYSTEM_RESOURCES GNUSTEP_SYSTEM_JAVA 
+  export GNUSTEP_SYSTEM_DOCUMENTATION GNUSTEP_SYSTEM_DOCUMENTATION_MAN GNUSTEP_SYSTEM_DOCUMENTATION_INFO
+
+  export GNUSTEP_LOCAL_APPS GNUSTEP_LOCAL_TOOLS GNUSTEP_LOCAL_LIBRARY
+  export GNUSTEP_LOCAL_HEADERS GNUSTEP_LOCAL_LIBRARIES GNUSTEP_LOCAL_RESOURCES GNUSTEP_LOCAL_JAVA 
+  export GNUSTEP_LOCAL_DOCUMENTATION GNUSTEP_LOCAL_DOCUMENTATION_MAN GNUSTEP_LOCAL_DOCUMENTATION_INFO
+
+  export GNUSTEP_NETWORK_APPS GNUSTEP_NETWORK_TOOLS GNUSTEP_NETWORK_LIBRARY
+  export GNUSTEP_NETWORK_HEADERS GNUSTEP_NETWORK_LIBRARIES GNUSTEP_NETWORK_RESOURCES GNUSTEP_NETWORK_JAVA 
+  export GNUSTEP_NETWORK_DOCUMENTATION GNUSTEP_NETWORK_DOCUMENTATION_MAN GNUSTEP_NETWORK_DOCUMENTATION_INFO
+
+  export GNUSTEP_USER_APPS GNUSTEP_USER_TOOLS GNUSTEP_USER_LIBRARY
+  export GNUSTEP_USER_HEADERS GNUSTEP_USER_LIBRARIES GNUSTEP_USER_RESOURCES GNUSTEP_USER_JAVA 
+  export GNUSTEP_USER_DOCUMENTATION GNUSTEP_USER_DOCUMENTATION_MAN GNUSTEP_USER_DOCUMENTATION_INFO
+else
+  unset GNUSTEP_SYSTEM_APPS 
+  unset GNUSTEP_SYSTEM_TOOLS 
+  unset GNUSTEP_SYSTEM_LIBRARY
+  unset GNUSTEP_SYSTEM_HEADERS 
+  unset GNUSTEP_SYSTEM_LIBRARIES 
+  unset GNUSTEP_SYSTEM_RESOURCES 
+  unset GNUSTEP_SYSTEM_JAVA 
+  unset GNUSTEP_SYSTEM_DOCUMENTATION 
+  unset GNUSTEP_SYSTEM_DOCUMENTATION_MAN
+  unset GNUSTEP_SYSTEM_DOCUMENTATION_INFO
+
+  unset GNUSTEP_LOCAL_APPS 
+  unset GNUSTEP_LOCAL_TOOLS 
+  unset GNUSTEP_LOCAL_LIBRARY
+  unset GNUSTEP_LOCAL_HEADERS 
+  unset GNUSTEP_LOCAL_LIBRARIES 
+  unset GNUSTEP_LOCAL_RESOURCES 
+  unset GNUSTEP_LOCAL_JAVA 
+  unset GNUSTEP_LOCAL_DOCUMENTATION 
+  unset GNUSTEP_LOCAL_DOCUMENTATION_MAN
+  unset GNUSTEP_LOCAL_DOCUMENTATION_INFO
+
+  unset GNUSTEP_NETWORK_APPS 
+  unset GNUSTEP_NETWORK_TOOLS 
+  unset GNUSTEP_NETWORK_LIBRARY
+  unset GNUSTEP_NETWORK_HEADERS 
+  unset GNUSTEP_NETWORK_LIBRARIES 
+  unset GNUSTEP_NETWORK_RESOURCES 
+  unset GNUSTEP_NETWORK_JAVA 
+  unset GNUSTEP_NETWORK_DOCUMENTATION 
+  unset GNUSTEP_NETWORK_DOCUMENTATION_MAN
+  unset GNUSTEP_NETWORK_DOCUMENTATION_INFO
+
+  unset GNUSTEP_USER_APPS 
+  unset GNUSTEP_USER_TOOLS 
+  unset GNUSTEP_USER_LIBRARY
+  unset GNUSTEP_USER_HEADERS 
+  unset GNUSTEP_USER_LIBRARIES 
+  unset GNUSTEP_USER_RESOURCES 
+  unset GNUSTEP_USER_JAVA 
+  unset GNUSTEP_USER_DOCUMENTATION 
+  unset GNUSTEP_USER_DOCUMENTATION_MAN
+  unset GNUSTEP_USER_DOCUMENTATION_INFO
 fi
 
 if [ -n "$GS_ZSH_NEED_TO_RESTORE_SET" ]; then
